content/svg/content/src/SVGSVGElement.cpp
@@ -754,7 +754,7 @@ SVGSVGElement::BindToTree(nsIDocument* aDocument,
     // Setup the style sheet during binding, not element construction,
     // because we could move the root SVG element from the document
     // that created it to another document.
-    aDocument->EnsureCatalogStyleSheet(kSVGStyleSheetURI);
+    aDocument->EnsureOnDemandBuiltInUASheet(kSVGStyleSheetURI);
   }
 
   if (mTimedDocumentRoot && smilController) {
